--- a/index.html
+++ b/index.html
@@ -26,9 +26,40 @@
           </a>
           <div class="dropdown-about">
             <ul>
-              <li><a href="#">Our Team</a></li>
-              <li><a href="#">Our History</a></li>
-              <li><a href="#">Careers</a></li>
+              <li>
+                <a href="#">
+                  <h3>Our Team</h3>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h3>Our History</h3>
+                  <i class="fa-solid fa-angle-right"></i>
+                </a>
+                <div class="dropdown-history">
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <h3>2010-2015</h3>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <h3>2016-2020</h3>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <h3>2021-Present</h3>
+                      </a>
+                    </li>
+                  </ul>
+              </li>
+              <li>
+                <a href="#">
+                  <h3>Careers</h3>
+                </a>
+              </li>
             </ul>
           </div>
         </li>
